--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -1,12 +1,38 @@
 {
     "version": 2,
     "builds": [
-        {"src": "*.js", "use": "@vercel/node"}
+        {
+            "src": "*.js",
+            "use": "@vercel/node"
+        }
     ],
     "routes": [
         {
             "src": "/(.*)",
             "dest": "/"
+        }
+    ],
+    "headers": [
+        {
+            "source": "/api/(.*)",
+            "headers": [
+                {
+                    "key": "Access-Control-Allow-Origin",
+                    "value": "https://food-tofs.vercel.app"
+                },
+                {
+                    "key": "Access-Control-Allow-Origin",
+                    "value": "https://food-bd69.vercel.app"
+                },
+                {
+                    "key": "Access-Control-Allow-Methods",
+                    "value": "GET, POST, PUT, DELETE"
+                },
+                {
+                    "key": "Access-Control-Allow-Headers",
+                    "value": "Content-Type"
+                }
+            ]
         }
     ]
 }
