--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -17,20 +17,20 @@
             "source": "/api/(.*)",
             "headers": [
                 {
-                    "key": "Access-Control-Allow-Origin",
-                    "value": "https://food-tofs.vercel.app"
+                    "key": "Access-Control-Allow-Credentials",
+                    "value": "true"
                 },
                 {
                     "key": "Access-Control-Allow-Origin",
-                    "value": "https://food-bd69.vercel.app"
+                    "value": "*"
                 },
                 {
                     "key": "Access-Control-Allow-Methods",
-                    "value": "GET, POST, PUT, DELETE"
+                    "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT"
                 },
                 {
                     "key": "Access-Control-Allow-Headers",
-                    "value": "Content-Type"
+                    "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version"
                 }
             ]
         }
